Remoção do bg-warning da classe da tag nav para que a navbar fique transparente e introdução da imagem de fundo

--- a/index.html
+++ b/index.html
@@ -25,19 +25,20 @@
   <body>
 
     <header><!-- Início de cabeçalho -->
-      <nav class="navbar navbar-expand-md navbar-light bg-warning fixed-top">
+      <nav class="navbar navbar-expand-md navbar-light fixed-top">
         <div class="container">
 
-          <!-- Logo Spotify no Menu -->
+            <!-- Logo Spotify no Menu -->
             <a class="navbar-brand" href="#">
               <img src="imagens/spotify.svg" width="142">
             </a>
+            <!-- /Fim Logo Spotify no Menu -->
 
-            <!-- Início botão mobile com "fontawesome" -->
+            <!-- Início botão mobile com link do "fontawesome" -->
             <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
               <i class="fas fa-bars text-white"></i>
             </button>
-            <!-- /Fim botão mobile com "fontawesome" -->
+            <!-- /Fim botão mobile com link do "fontawesome" -->
           
           <div class="collapse navbar-collapse" id="nav-principal"> 
             <ul class="navbar-nav ml-auto"> 
@@ -62,6 +63,9 @@
         </div>
       </nav>
     </header><!-- /Fim de cabeçalho -->
+
+    
+
 
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
