--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
 
     <header><!-- Início de cabeçalho -->
-      <nav class="navbar navbar-expand-md navbar-light fixed-top">
+      <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparente">
         <div class="container">
 
             <!-- Logo Spotify no Menu -->
@@ -51,6 +51,11 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Baixar</a>
               </li>
+
+              <!-- Início divisor de menu -->
+              <li class="nav-item divisor"></li>
+              <!-- /Fim divisor de menu -->
+
               <li class="nav-item">
                 <a class="nav-link" href="#">Inscrever-se</a>
               </li>
@@ -64,7 +69,20 @@
       </nav>
     </header><!-- /Fim de cabeçalho -->
 
-    
+    <!-- Início da secção de conteúdos -->
+    <section id="home" class="d-flex">
+      <div class="container align-self-center">
+        <div class="row">
+          <div class="col-md-12 capa"><!-- criação do grid de 12 colunas + classe "capa" -->
+
+            <h1>Música para todos</h1>
+            <a href="#" class="btn btn-lg btn-custom btn-roxo">Aproveite o Spotify Free</a>
+            <a href="#" class="btn btn-lg btn-custom btn-branco">Aproveite Spotify Premium</a>
+            
+          </div>
+        </div>
+      </div>      
+    </section> <!-- /Fim da secção de conteúdos -->
 
 
     <!-- JavaScript (Opcional) -->
