Adicionado o início da seção de conteúdos e a estrutura para a segunda seção de conteúdos

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
     </header><!-- /Fim de cabeçalho -->
 
     <!-- Início da secção de conteúdos -->
-    <section id="home" class="d-flex">
-      <div class="container align-self-center">
-        <div class="row">
+    <section id="home" class="d-flex"><!-- id: home -->
+      <div class="container align-self-center"><!-- container -->
+        <div class="row"><!-- row -->
           <div class="col-md-12 capa"><!-- criação do grid de 12 colunas + classe "capa" -->
 
             <h1>Música para todos</h1>
@@ -80,9 +80,61 @@
             <a href="#" class="btn btn-lg btn-custom btn-branco">Aproveite Spotify Premium</a>
             
           </div>
+        </div><!-- /row -->
+      </div><!-- /container -->      
+    </section> <!-- /Fim da secção de conteúdos. Id: /home -->
+
+    <section id="servicos"><!-- id: servicos -->
+      <div class="container"><!-- container -->
+        <div class="row"><!-- row -->
+          <div class="col-md-6">
+            <div class="row albuns">
+              <div class="col-md-6">
+                <img src="imagens/img1.jpg" class="img-fluid d-none d-md-block">
+              </div><!-- para esconder as imagens em um determinado tamanho de tela: class="... d-none d-md-block" -->
+              <div class="col-md-6">
+                <img src="imagens/img2.jpg" class="img-fluid d-none d-md-block">
+              </div>
+            </div>
+            <div class="row albuns">
+              <div class="col-md-6">
+                <img src="imagens/img3.jpg" class="img-fluid d-none d-md-block">
+              </div>
+              <div class="col-md-6">
+                <img src="imagens/img4.jpg" class="img-fluid d-none d-md-block">
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            
+            <h2>O que o Spotify tem?</h2>
+
+            <h3>Músicas</h3>
+            <p>O Spotify tem milhões de músicas. Escute seus sons favoritos, descubra novas músicas e reúna seus favoritos em um só lugar.</p>
+
+            <h3>Playlists</h3>
+            <p>No Spotify você encontra uma playlist para cada momento. Todas feitas por fanáticos e especialistas da música.</p>
+
+            <h3>Novos lançamentos</h3>
+            <p>Escute os novos lançamentos de singles e álbuns da semana e veja o que está bombando no Top 50.</p>
+
+          </div>
+        </div><!-- /row -->
+      </div><!-- /container --> 
+    </section><!-- Id: /servicos -->
+
+    <section id="recursos">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            textos
+          </div>
+          <div class="col-md-8">
+            imagens
+          </div>
         </div>
-      </div>      
-    </section> <!-- /Fim da secção de conteúdos -->
+      </div>
+    </section>
 
 
     <!-- JavaScript (Opcional) -->
