--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </div><!-- /container -->      
     </section> <!-- /Fim da secção de conteúdos. Id: /home -->
 
-    <section id="servicos"><!-- id: servicos -->
+    <section id="servicos" class="caixa"><!-- id: servicos -->
       <div class="container"><!-- container -->
         <div class="row"><!-- row -->
           <div class="col-md-6">
@@ -123,14 +123,32 @@
       </div><!-- /container --> 
     </section><!-- Id: /servicos -->
 
-    <section id="recursos">
+    <section id="recursos" class="caixa">
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            textos
+            
+            <h2>Fácil</h2>
+
+            <h3>Buscar</h3>
+            <p>Já sabe o que quer escutar? É só procurar e apertar o play.</p>
+
+            <h3>Navegar</h3>
+            <p>Veja os novos lançamentos, o que está bombando nas paradas e as melhores playlists para o seu momento.</p>
+
+            <h3>Descobrir</h3>
+            <p>Curta músicas novas toda segunda-feira com uma playlist personalizada pra você. Ou relaxe e curta uma das rádios.</p>
+
           </div>
           <div class="col-md-8">
-            imagens
+            <div class="row rotacionar">
+              <div class="col-md-6">
+                <img src="imagens/iphone1.png" class="img-fluid">
+              </div>
+              <div class="col-md-6">
+                <img src="imagens/iphone2.png" class="img-fluid">
+              </div>
+            </div>
           </div>
         </div>
       </div>
