--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <div class="col-md-6">
             
             <h2>O que o Spotify tem?</h2>
-
+            
             <h3>Músicas</h3>
             <p>O Spotify tem milhões de músicas. Escute seus sons favoritos, descubra novas músicas e reúna seus favoritos em um só lugar.</p>
 
@@ -153,6 +153,54 @@
         </div>
       </div>
     </section>
+
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-2">
+            <img src="imagens/spotify.svg" width="142">
+          </div>
+          <div class="col-md-2">
+            <h4>Company</h4>
+            <ul class="navbar-nav"><!-- Aqui utilizei a formatação padrão da classe "navbar-nav", para retirar os marcadores dos links, que também poderiam ser retirados com outras classes do bootstrap -->
+              <li><a href="">Sobre</a></li>
+              <li><a href="">Empregos</a></li>
+              <li><a href="">Imprensa</a></li>
+              <li><a href="">Novidades</a></li>
+            </ul>
+          </div>
+          <div class="col-md-2">
+            <h4>Comunidades</h4>
+            <ul class="navbar-nav">
+              <li><a href="">Artistas</a></li>
+              <li><a href="">Desenvolvedores</a></li>
+              <li><a href="">Marcas</a></li>
+            </ul>
+          </div>
+          <div class="col-md-2">
+            <h4>Links úteis</h4>
+            <ul class="navbar-nav">
+              <li><a href="">Ajuda</a></li>
+              <li><a href="">Presentes</a></li>
+              <li><a href="">Player da web</a></li>
+            </ul>
+          </div>
+          <div class="col-md-4">
+            <ul>
+              <li>
+                <a href=""><img src="imagens/facebook.png"></a>
+              </li>
+              <li>
+                <a href=""><img src="imagens/twitter.png"></a>
+              </li>
+              <li>
+                <a href=""><img src="imagens/instagram.png"></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
 
 
     <!-- JavaScript (Opcional) -->
